New updates to the cards and footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="card-header">HTML & CSS </div>
             <div class="card-img"><img src="images/htmlpng.png" alt="" id="card-img-html"></div>
             <div class="card-body">
-              <h5 class="card-title">My HTML Projects </h5>
+              <h5 class="card-title">My HTML & CSS Projects </h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
 
@@ -139,8 +139,8 @@
 
 
 
-      <div class="col-3" id="">
-            <div class="card text-bg-dark mb-3" style="max-width: 22rem;">
+      <div class="col-3" id="htmlcard2">
+            <div class="card text-bg-dark mb-3" style="max-width: 22rem;" id="htmlcard2">
                 <div class="card-header">Ecommerce | Landing Page </div>
                 <div class="card-img"><img src="images/css.png" alt="" id="card-img-html"></div>
                 <div class="card-body">
@@ -155,12 +155,12 @@
 
 
 
-          <div class="col-3" id="">
-                <div class="card text-bg-dark mb-3">
+          <div class="col-3" id="htmlcard2">
+                <div class="card text-bg-dark mb-3"  style="max-width: 22rem;" id="htmlcard2">
                     <div class="card-header"> Photoshop & Premiere Pro  </div>
                     <div class="card-img"><img src="images/css.png" alt="" id="card-img-html"></div>
                     <div class="card-body">
-                      <h5 class="card-title">Video Editing - Content Creation Projects </h5>
+                      <h5 class="card-title">Video Editing - Projects </h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
           </div>
@@ -251,7 +251,6 @@
 
 
 
--->
       <div class="row" id="Footer">
         <div class="col-3">
 
