--- a/flash.html
+++ b/flash.html
@@ -94,7 +94,7 @@
 
     <div class="col-12" id=DedicationH>
 
-  <h2 class="display-6"> This is my lesson 10 assignment</h2>
+  <h2 class="display-6" id="msg" > This is my lesson 10 assignment</h2>
 
 
   <h3 class="">Video 1 </h3>
@@ -202,6 +202,9 @@
 
   <!-- BOOTSTRAP CDN -->
 
+
+
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
