--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>IMED 2359</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link href="styles0.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
+  <link href="style1.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!--This is the CDN for the Boot Strap Icons To Work On THe Page  -->
@@ -66,105 +66,65 @@
           <li><a class="dropdown-item" href="product.html">Online - Beatstars Store</a></li>
 
           <!--    <li><hr class="dropdown-divider"></li>-->
-
-
         </ul>
       </li>
-
 
     </ul>
   </div>
   <!-- End Of Navigation -->
+<div class="container-fluid"></div>
 
+<section class"hero">
 
-  <div class="container-fluid">
+<div class="Row" id="row1">
 
+<div class="col-12">
 
-    <div class="row">
-      <div class="col-12">
-        <div class="welcome">
-          <h1 class="display-1">Welcome To My Portfolio</h1>
-        </div>
-      </div>
 
-    </div>
-    <!--- -->
 
 
+<h2 class="welcome-msg">Welcome To My Portfolio </h2>
+<h4 class="welcome-msg-2">Front End - Web Development </h4>
 
+  <img src="images/Clouds draft 2.jpg" class="card-img-top" alt="...">
 
+  </div>
+</div>
 
-            <h2 class="display-4" id="DedicationH">Projects</h2>
 
+</div>
 
-    <div class="row">
 
-      <div class="col-3">
 
 
-        <div class="card text-bg-dark mb-3" style="max-width: 22rem;" id="htmlcard">
-          <div class="card-header">HTML5 </div>
-          <div class="card-img"><img src="images/htmlpng.png" alt="" id="card-img-html"></div>
-          <div class="card-body">
-            <h5 class="card-title">My HTML Projects </h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
+</div>
 
 
 
-        </div></div>
 
 
 
 
-        <div class="col-3">
 
 
-          <div class="card text-bg-dark mb-3" style="max-width: 22rem;" id="htmlcard">
-            <div class="card-header">HTML & CSS </div>
-            <div class="card-img"><img src="images/htmlpng.png" alt="" id="card-img-html"></div>
-            <div class="card-body">
-              <h5 class="card-title">My HTML & CSS Projects </h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
 
 
 
-          </div>
 
 
+</section>
 
+<section>
 
-      </div>
 
 
 
-      <div class="col-3" id="htmlcard2">
-            <div class="card text-bg-dark mb-3" style="max-width: 22rem;" id="htmlcard2">
-                <div class="card-header">Ecommerce | Landing Page </div>
-                <div class="card-img"><img src="images/css.png" alt="" id="card-img-html"></div>
-                <div class="card-body">
-                  <h5 class="card-title"> Online Store - Projects </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-      </div>
-    </div>
 
 
 
 
 
 
-          <div class="col-3" id="htmlcard2">
-                <div class="card text-bg-dark mb-3"  style="max-width: 22rem;" id="htmlcard2">
-                    <div class="card-header"> Photoshop & Premiere Pro  </div>
-                    <div class="card-img"><img src="images/css.png" alt="" id="card-img-html"></div>
-                    <div class="card-body">
-                      <h5 class="card-title">Video Editing - Projects </h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-          </div>
-        </div>
 
 
 
@@ -174,107 +134,175 @@
 
 
 
-    <div class="row">
-      <!--Footer -->
-      <div class="col-4">
-        <!--column size -->
 
-        <h3 class="display-4" id="ContactH"> Site Map  </h3><!--    Display Name of a heading  -->
 
-        <div class="list-group" id="listgroup1">
-          <!-- List Group Contact -->
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark" aria-current="true">
-            Home
-          </a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">About</a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Table Of Contents</a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Products</a>
-            <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Projects</a>
-              <a href="#" class="list-group-item list-group-item-dark list-group-item-action">CSS</a>
-                <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Javascript</a>
 
+</section>
 
 
+<section>
 
 
-          <!--  <a class="list-group-item list-group-item-action disabled">A disabled link item</a> -->
-        </div>
 
-      </div>
 
 
-      <div class="col-4">
 
-        <h3 class="display-4" id="ServicesH"> Services </h3>
 
-        <div class="list-group" id="listgroup2">
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark" aria-current="true">
-            Photoshop
-          </a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Adobe After Effects</a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Audio - Recording</a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Mixing and Mastering.
 
 
-          </a>
-          <!--  <a class="list-group-item list-group-item-action disabled">A disabled link item</a> -->
-        </div>
 
 
 
-      </div>
 
-      <div class="col-4">
 
-        <h3 class="display-4" id="MoreinfoH"> More Info </h3>
 
-        <div class="list-group" id="listgroup3">
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark" aria-current="true">
-            Press
-          </a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">TradingView</a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Reddit
-          </a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Discord- Community Group</a>
-          <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Blog
 
-            <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Social Media
 
-              <a href="#" class="list-group-item list-group-item-dark list-group-item-action">Github
 
 
-          <!--  <a class="list-group-item list-group-item-action disabled">A disabled link item</a> -->
-        </div>
 
 
-      </div>
 
 
 
-      <div class="row" id="Footer">
-        <div class="col-3">
+</section>
 
-        </div>
 
-        <div class="col-3">
+</div>
 
-        </div>
 
 
 
-        <div class="col-3">
-          <!-- Home Button Here -->
-          <div class="buttons">
-            <button class="btn btn-primary-black" type="button" href="index.html">Home</button>
 
 
 
 
-          </div>
-        </div>
-      </div>
-    <!-- Javascript CDN that had to be copied to get the dropdown menu to work -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- end of page-->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+  </body>
 
-</>
+  </html>
