adding the projects section .

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </ul>
   </div>
   <!-- End Of Navigation -->
-<div class="container-fluid"></div>
+<div class="container-fluid">
 
 <section class"hero">
 
@@ -80,41 +80,45 @@
 
 <div class="col-12">
 
+  <div class="card text-bg-dark">
+    <img src="images/Clouds draft 2.jpg" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h2 class="display-3">Zarius Portfolio</h2>
+      <p class="card-text">Front End - Development </p>
 
-
-
-<h2 class="welcome-msg">Welcome To My Portfolio </h2>
-<h4 class="welcome-msg-2">Front End - Web Development </h4>
-
-  <img src="images/Clouds draft 2.jpg" class="card-img-top" alt="...">
+    </div>
 
   </div>
 </div>
-
-
-</div>
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
 
 
 
 
 </section>
 
-<section>
+<section class="projects">
+
+<div class="row" >
+
+
+  <div class="col-4">
+    <h4>Websites & Online Stores </h4>
+
+  </div>
+
+
+  <div class="col-4">
+    <h4> Photoshop & Design </h4>
+  </div>
+
+
+  <div class="col-4">
+    <h4>Film & Animatioin </h4>
+  </div>
+
+</div>
+
+
 
 
 
