--- a/index.html
+++ b/index.html
@@ -96,25 +96,62 @@
 
 </section>
 
+
+
+<!--Project Section  -->
 <section class="projects">
 
 <div class="row" >
 
 
-  <div class="col-4">
-    <h4>Websites & Online Stores </h4>
+<div class="col-12">
 
+<h3 class="display-2" id="P-Header"> Projects</h3>
+
+
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-150">
+
+        <img src="images/css.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h1 class="card-title">Websites </h1>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/css.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2 class="card-title">Photoshop & Design </h2>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/htmlpng.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2 class="card-title">Film & Music </h2>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
   </div>
 
 
-  <div class="col-4">
-    <h4> Photoshop & Design </h4>
-  </div>
 
-
-  <div class="col-4">
-    <h4>Film & Animatioin </h4>
-  </div>
+</div>
 
 </div>
 
@@ -144,13 +181,86 @@
 </section>
 
 
-<section>
+<section class="footer">
+
+
+
+
+<div class="row">
+
+
+
+<div class="col-4">
+  <h3 class="foot-Header">Contact Me</h3>
+<div class="contact-list">
+
+<ul>
+  <li><p><a href="">Email Me</a></p></li>
+  <li><p>Linked In </p></li>
+  <li><p>Git Hub - Page</p></li>
+  <li><p>Discord</p></li>
 
 
 
 
 
+</ul>
 
+
+
+</div>
+
+
+
+</div>
+  <div class="col-4">
+    <h3 class="foot-Header">Site Map</h3>
+    <div class="sitemap-list">
+
+    <ul>
+      <li><p>Home</p></li>
+      <li><p>Linked In </p></li>
+      <li><p>About Me</p></li>
+      <li><p>Contact</p></li>
+
+
+
+
+
+    </ul>
+
+
+
+    </div>
+
+  </div>
+
+<div class="col-4">
+
+
+<h3 class="foot-Header">About Me </h3>
+<div class="aboutme-list">
+
+<ul>
+  <li><p>Html Career</p></li>
+  <li><p>Javascript/CSS Experince </p></li>
+  <li><p>Film Career</p></li>
+  <li><p>Music and Sound Engineering</p></li>
+
+
+
+
+
+</ul>
+
+
+
+</div>
+
+</div>
+
+
+</div>
 
 
 
