--- a/index.html
+++ b/index.html
@@ -196,11 +196,9 @@
 
 <ul>
   <li><p><a href="">Email Me</a></p></li>
-  <li><p>Linked In </p></li>
-  <li><p>Git Hub - Page</p></li>
-  <li><p>Discord</p></li>
-
-
+    <li><p><a href="">Linked In</a></p></li>
+  <li><p><a href="">Git Hub </a></p></li>
+  <li><p><a href="">Join Mailing List </a></p></li>
 
 
 
