change store to active

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="sitemap-list">
 
     <ul>
-      <li><p>Home</p></li>
+      <li><p><a href="">Home</a></p></li>
       <li><p>Linked In </p></li>
       <li><p>About Me</p></li>
       <li><p>Contact</p></li>
