--- a/index0.html
+++ b/index0.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IMED 2359</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 
 
@@ -28,7 +29,8 @@
 
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Projects</a>
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+          aria-expanded="false">Projects</a>
         <ul class="dropdown-menu">
 
           <!--    <li><hr class="dropdown-divider"></li>-->
@@ -107,9 +109,10 @@
     <div class="row">
       <div class="col-12" id="introsection">
         <h4 class="" id="ZW"> Zarius Webb </h4>
-        <p id="introsectionp" class="">Front End Developer - Graphic Design Expert</p>
+        <p id="introsectionp" class="">Front End Developer </p>
 
-        <p>When it comes to design or artistic work. Having an eye and a good knack for conversating with people makes you different it change you. </p>
+        <p>When it comes to design or artistic work. Having an eye and a good knack for conversating with people makes
+          you different it change you. </p>
         <p>
           Visit the rest of my site or feel free to use the site map link located at the bottom of the page to navigate.
         </p>
@@ -121,163 +124,164 @@
     </div>
     <!-- End of Introduction row div -->
 
+<!-- Projects Section -->
+<section class="project">
+
+  
+</section>
+
+
+
+
 
 
     <div class="row align-items-center" id="Projectline">
       <div class="col-md-4" id="projects">
         <div class="card text-bg-dark">
-          <img src="images/burger2.jpeg" class="card-img-top" alt="...">
+          <img class="card-img-top" src="images/crypto.jpeg" />
+     
           <div class="card-body">
-            <h5 class="card-title">Projet 1 - Grainz - Exchange platform</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Website - Grainz - Crytpocurrency Exchange platform</h5>
+            <p class="card-text">In this project i created a website that would allow people to exchange or buy /sell cryptocurrencies..</p>
             <p>Languages : HTML/CSS/BootStrap</p>
 
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text fw-bold"><small class="text-muted"><a href="/GRNZ/indexboot.html">  Visit Site </a></small></p>
           </div>
         </div>
       </div>
+
+
+
+
+
       <div class="col-md-4" id="projects">
         <div class="card text-bg-dark">
-          <img src="images/burger4.jpeg" width="" class="card-img-top" alt="...">
+          <img src="images/Truck.jpeg" width="" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Project 1 - Company Trucking Website</h5>
+            <h5 class="card-title">Website - Truckfin - Shipping & Frieght</h5>
             <p class="card-text">This project i built a website for a shipping and trucking buisiness.
             <p>Languages : HTML/CSS/Bootstrap </p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text fw-bold"><small class="text-muted"><a href="/Truckfin/index.html">  Visit Site </a></small></p>
           </div>
         </div>
+
+
+
+
+
+
 
 
       </div>
       <div class="col-md-4" id="projects">
         <div class="card text-bg-dark">
-          <img src="images/burger3.jpeg" width="" class="card-img" alt="...">
+          <img src="images/cupcake7.jpeg" width="" class="card-img" alt="...">
           <div class="card-body">
-            <h5 class="card-title"> Cupcake Bakery - Ecommerce Store </h5>
-            <p class="card-text">In this project i build a small bakery store that lets customers select and order cupcaks.
+            <h5 class="card-title"> Shawz -Local Cupcake Bakery - Ecommerce Store </h5>
+            <p class="card-text">In this project i build a small bakery store that lets customers select and order
+              cupcaks.
             <p>Languages : HTML/CSS/Bootstrap</p>
-            </p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text fw-bold"><small class="text-muted"><a href="/Truckfin/index.html">  Visit Site </a></small></p>
           </div>
         </div>
       </div>
     </div>
+
+
+
+
+
     <!--End of Row Div  -->
+
+
+
+
+
     <div class="row align-items-center">
 
-      <div class="col-md-4">
-        <h4 class="display-3 ">Contact</h4>
-        <img src="images/burger2.jpeg" alt="" width="280px">
 
-
-      </div>
+<div class="col-md-4">
 
 
 
 
 
-      <div class="col-md-4">
 
-        <h4 class="display-5" id="ContactHeading"> Email Me </h4>
-        <p>Eager to Learn and Collaborate on projects of any size. From personal business to working with start up companies.Send me an email with the form below. </p>
 
-        <form id="contactform">
-          <div class="row mb-3">
-            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="inputEmail3">
-            </div>
-          </div>
-          <div class="row mb-2">
-            <label for="inputPassword3" class="col-2 col-form-label">Subject</label>
-            <div class="col-sm-10">
-              <input type="subject" class="form-control" id="inputPassword3">
-            </div>
-          </div>
 
-          <div class="d-grid gap-2 col-6 mx-auto" id="btndiv">
 
-            <button type="submit" class="btn btn-primary" id="submitbtn">Send - Email</button>
-
-          </div>
-
-        </form>
-
-      </div>
+</div>
 
 
 
 
 
-      <div class="col-md-4">
-
-        <h3 class="display-5" id="ContactHeading">Links | Social</h3>
 
 
+                  <div class="col-md-4">
 
-        <div class="link" id="linklist">
+                    <h4 class="display-5" id="ContactHeading"> Contact Form   </h4>
+                    <p>Eager to Learn and Collaborate on projects of any size. From personal business to working with start up
+                      companies.Send me an email with the form below. </p>
 
-          <ul class="list">
-            <li class="list"><a href="www.github.com"><i class="bi bi-github"></i> Github</a></li>
-            <br>
-            <li class="list"><a href=""><i class="bi bi-linkedin"></i>Linked In</a></li>
-          </ul>
-
-
-        </div>
-
+                    <form id="contactform">
+                      <div class="row mb-3">
+                        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                          <input type="email" class="form-control" id="inputEmail3">
+                        </div>
+                      </div>
 
 
 
+                      <div class="row mb-2">
+                        <label for="inputPassword3" class="col-2 col-form-label">Subject</label>
+                        <div class="col-sm-10">
+                          <input type="subject" class="form-control" id="inputPassword3">
+                        </div>
+                      </div>
 
-      </div>
+                      <div class="d-grid gap-2 col-6 mx-auto" id="btndiv">
+
+                        <button type="submit" class="btn btn-primary" id="submitbtn">Send - Email</button>
+
+                      </div>
+
+                    </form>
+
+                  </div>
+
+
+
+<div class="col-md-4"></div>
+
+      
 
     </div>
 
 
 
+    <div class="row">
 
 
+      <div class="cs" id="SocialsDiv">
 
+<h2 class="Linkedin">Linked In <i class="bi bi-linkedin"></i></h2>
+<p><a href="www.kingofmanygithub.com" class="">Visit Linked In Profile</a></p>
 
-
-
-
-    <!--
-      <div class="row">
-        <div class="col-4">
-          <p>Web Designer</p>
-        </div>
-
-        <div class="col-4">
-        <p>Audio Engineer</p>
-        </div>
-
-
-        <div class="col-4">
-        <p>Stock Investing & Crypto </p>
-        </div>
-
+<h2 class="GitHub">GitHub<i class="bi bi-github"></i></h2>
+<p><a href="www.github.com"> Visit my GitHub Profile</a></p>
       </div>
-    </div> -->
-
-
-
-
-    <!--
-
-
-    <div class="row"><div class="col-12">
-      <!--column size -->
-
-
+    </div>
 
 
   </div>
   </div>
   </div>
   <!-- Javascript CDN that had to be copied to get the dropdown menu to work -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
