--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
-<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IMED 2359</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link href="style1.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
+
+
+  <link href="styles0.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
+
+
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!--This is the CDN for the Boot Strap Icons To Work On THe Page  -->
 
-
 </head>
+
 <body>
   <!--Navigation -->
   <div class="Navy">
@@ -25,23 +29,20 @@
 
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Table of contents</a>
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+          aria-expanded="false">Projects</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="images.html">Adding Images & Text</a></li>
-          <li><a class="dropdown-item" href="lesson4.html">Lesson 4 - CSS - Styling </a></li>
-          <li><a class="dropdown-item" href="lesson6.html">Lesson 6 - Page Layout</a></li>
+
           <!--    <li><hr class="dropdown-divider"></li>-->
-          <li><a class="dropdown-item" href="LESSON8.html">Lesson 8 - Tables</a></li>
           <li><a class="dropdown-item" href="#">Midterm</a></li>
-          <li><a class="dropdown-item" href="flash.html">Adding Video - Sound</a></li>
           <li><a class="dropdown-item" href="#">Mobile Design & Bootstrap</a></li>
 
           <li><a class="dropdown-item" href="lesson12/index.html">Lesson 12 - BootStrap Yosemite </a></li>
 
-          <li><a class="dropdown-item" href="/Truckfin/index.html">Truckfin- Company Website </a></li>
-          <li><a class="dropdown-item" href="/GRNZ/indexboot.html">GRNZ - CrytpoCurrency Site </a></li>
-          <li><a class="dropdown-item" href="/shaw-master/index.html">Shaw- CupCakes - Landing Page </a></li>
-          <li><a class="dropdown-item" href="/Final/index.html">Final Project - Steam Pros  </a></li>
+          <li><a class="dropdown-item" href="/Truckfin/index.html">Truckfin- Company Draft Website </a></li>
+          <li><a class="dropdown-item" href="/GRNZ/indexboot.html">GRNZ - CrytpoCurrency Exchange Site </a></li>
+          <li><a class="dropdown-item" href="/shaw-master/index.html">Shaw- CupCakes - Store Landing Page </a></li>
+
         </ul>
       </li>
 
@@ -52,7 +53,7 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" href="socialmedia.html">Social Media</a>
+        <a class="nav-link" href="skills.html">Skills</a>
       </li>
 
 
@@ -60,33 +61,55 @@
         <a class="nav-link" href="Blog.html">Blog</a>
       </li>
 
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="product.html" role="button" aria-expanded="false">Products</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="product.html">Online - Beatstars Store</a></li>
-
-          <!--    <li><hr class="dropdown-divider"></li>-->
-        </ul>
-      </li>
-
     </ul>
   </div>
+                                    <!-- End Of Navigation -->
+                                    <!-- End Of Navigation -->
   <!-- End Of Navigation -->
-<div class="container-fluid">
+  <!-- End Of Navigation -->
+  
+                                                                                  <!-- End Of Navigation -->
+                                                                                  <!-- End Of Navigation -->
+                                                                                  
 
-<section class"hero">
+  <div class="container-fluid">
 
-<div class="Row" id="row1">
 
-<div class="col-12">
-
-  <div class="card text-bg-dark">
-    <img src="images/Clouds draft 2.jpg" class="card-img" alt="...">
-    <div class="card-img-overlay">
-      <h2 class="display-3">Zarius Portfolio</h2>
-      <p class="card-text">Front End - Development </p>
+    <div class="row">
+      <div class="col-md-12" id="TitleSection">
+        <div class="welcome">
+          <h1 class="display-1 mt-5" id="PortfolioHeading"><i class="bi bi-globe"></i> Portfolio</h1>
+        </div>
+      </div>
 
     </div>
+
+
+    <!-- Start of Introduction row div -->
+
+    <div class="row">
+      <div class="col-12" id="introsection">
+        <h4 class="" id="ZW"> Zarius Webb </h4>
+        <p id="introsectionp" class="">Front End Developer </p>
+
+        <p>When it comes to design or artistic work. Having an eye and a good knack for conversating with people makes
+          you different it change you. </p>
+        <p>
+          Visit the rest of my site or feel free to use the site map link located at the bottom of the page to navigate.
+        </p>
+      </div>
+    </div>
+ 
+<!-- Mid section here -->
+
+
+<div class="container-4">
+
+  <div class="item item-4">
+
+    <!-- <img src="images/tbz.png" class="circle" alt="">
+<p class="mt-4">Here are some projects.</p> -->
+
 
   </div>
 </div>
@@ -94,57 +117,47 @@
 
 
 
-</section>
+
+
+<div class="heading3">
+  <div class="display-3 text-center mt-5 mb-5">Projects </div>
+</div>
+
+
+<div class="container-2">
 
 
 
-<!--Project Section  -->
-<section class="projects">
-
-<div class="row" >
 
 
-<div class="col-12">
-
-<h3 class="display-2" id="P-Header"> Projects</h3>
 
 
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card h-150">
 
-        <img src="images/css.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h1 class="card-title">Websites </h1>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+  
+  <div class="card-group">
+    <div class="card bg-dark text-light">
+      <img class="card-img-top img-fluid" src="images/crypto.jpeg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Grainz Exchange platform</h5>
+        <p class="card-text">In this project i created a website that would allow people to exchange or buy /sell cryptocurrencies..</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="images/css.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h2 class="card-title">Photoshop & Design </h2>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+    <div class="card bg-dark text-light">
+      <img class="card-img-top  img-fluid" src="images/truckhero2.jpeg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Truckfin </h5>
+        <p class="card-text">This project i built a website for a shipping and trucking buisiness.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="images/htmlpng.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h2 class="card-title">Film & Music </h2>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+    
+    <div class="card bg-dark text-light">
+      <img class="card-img-top img-fluid" src="images/cupcake7.jpeg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Shadwan Local Cupcake Bakery</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
   </div>
@@ -153,7 +166,6 @@
 
 </div>
 
-</div>
 
 
 
@@ -170,251 +182,74 @@
 
 
 
+    <!-- Start of Contact Form Section  -->
+<div class="container">
 
 
 
 
+ <div class="item item-2">
+  
+  
+  
+  <h4 class="display-5 mt-5" id="ContactHeading"> Contact Form   </h4>
+  <p>Eager to Learn and Collaborate on projects of any size. From personal business to working with start up
+    companies.Send me an email with the form below. </p>
+
+  <form id="contactform">
+    <div class="row mb-3">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputEmail3">
+      </div>
+    </div>
 
 
 
+    <div class="row mb-5">
+      <label for="inputPassword3" class="col-2 col-form-label">Subject</label>
+      <div class="col-sm-10">
+        <input type="subject" class="form-control" id="inputPassword3">
+      </div>
+    </div>
 
-</section>
+    <div class="d-grid gap-2 col-6 mx-auto" id="btndiv">
 
-
-<section class="footer">
-
-
-
-
-<div class="row">
-
-
-
-<div class="col-4">
-  <h3 class="foot-Header">Contact Me</h3>
-<div class="contact-list">
-
-<ul>
-  <li><p><a href="">Email Me</a></p></li>
-    <li><p><a href="">Linked In</a></p></li>
-  <li><p><a href="">Git Hub </a></p></li>
-  <li><p><a href="">Join Mailing List </a></p></li>
-
-
-
-</ul>
-
-
-
-</div>
-
-
-
-</div>
-  <div class="col-4">
-    <h3 class="foot-Header">Site Map</h3>
-    <div class="sitemap-list">
-
-    <ul>
-      <li><p><a href="">Home</a></p></li>
-      <li><p>Linked In </p></li>
-      <li><p>About Me</p></li>
-      <li><p>Contact</p></li>
-
-
-
-
-
-    </ul>
-
-
+      <button type="submit" class="btn btn-primary" id="submitbtn">Send - Email</button>
 
     </div>
 
+  </form></div>
+
+
+
+</div>
+
+</div>
+<div class="item"></div>
+
+</div>
+
+
+<div class="item"></div>
+
+</div>
+</div>
+  </div>
   </div>
 
-<div class="col-4">
 
 
-<h3 class="foot-Header">About Me </h3>
-<div class="aboutme-list">
 
-<ul>
-  <li><p>Html Career</p></li>
-  <li><p>Javascript/CSS Experince </p></li>
-  <li><p>Film Career</p></li>
-  <li><p>Music and Sound Engineering</p></li>
 
+  <!-- Javascript CDN that had to be copied to get the dropdown menu to work -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 
 
 
 
-</ul>
+</body>
 
-
-
-</div>
-
-</div>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</section>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- end of page-->
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
-
-  </html>
+</html>
