--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body>
   <!--Navigation -->
   <div class="Navy">
-
-    <ul class="nav nav-tabs justify-content-center">
+    <ul class="nav nav-tabs justify-content-center
+">
       <li class="nav-item">
         <a class="nav-link" aria-current="page" href="index.html">Home</a>
       </li>
@@ -133,7 +133,7 @@
             <p class="card-text">In this project i created a website that would allow people to exchange or buy /sell
               cryptocurrencies..</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <p><button class="bg-slate-600 p-3 rounded-3 mt-3" >View Project</button></p>
+            <p><button class=" bg-teal-400 p-3 rounded-3 mt-3 shadow-md shadow-teal-300/20 " >View Project</button></p>
           </div>
         </div>
         <div class="card bg-dark text-light">
@@ -142,7 +142,7 @@
             <h5 class="card-title">Truckfin </h5>
             <p class="card-text">This project i built a website for a shipping and trucking buisiness.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <p><button class="bg-slate-600 p-3 rounded-3 mt-3" >View Project</button></p>
+            <p><button class="bg-teal-400 p-3 rounded-3 mt-3 shadow-md shadow-teal-300/20" >View Project</button></p>
           </div>
         </div>
 
@@ -152,7 +152,7 @@
             <h3 class="card-title">Shadwan Local Cupcake Bakery</h3>
             <p class="card-text">Ecommerce store for a local cupcake business</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        <button class="bg-slate-600 p-3 mt-4 rounded-2"><a href="GRNZ/indexboot.html">View Project</a></button>
+        <button class="bg-teal-400 p-3 rounded-3 mt-3 shadow-md shadow-teal-300/20"><a href="GRNZ/indexboot.html">View Project</a></button>
           </div>
         </div>
       </div>
