--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 
 
-          <h4 class="display-5 mt-5" id="ContactHeading"> Contact Form </h4>
+          <h4 class="mt-5" id="ContactHeading"> Contact Form </h4>
           <p>Eager to Learn and Collaborate on projects of any size. From personal business to working with start up
             companies.Send me an email with the form below. </p>
 
