--- a/index1.html
+++ b/index1.html
@@ -1,50 +1,47 @@
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IMED 2359</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Courgette&family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link href="styles0.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
-
-
-  <link href="styles0.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
+  <link href="style1.css" rel="stylesheet" type="text/css" /> <!-- Linking my external Css -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!--This is the CDN for the Boot Strap Icons To Work On THe Page  -->
 
-</head>
 
+</head>
 <body>
   <!--Navigation -->
-  <div class="Navy sticky-top">
+  <div class="Navy">
 
-    <ul class="nav nav-tabs justify-content-center ">
+    <ul class="nav nav-tabs justify-content-center">
       <li class="nav-item">
         <a class="nav-link" aria-current="page" href="index.html">Home</a>
       </li>
 
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-          aria-expanded="false">Projects</a>
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Table of contents</a>
         <ul class="dropdown-menu">
-
+          <li><a class="dropdown-item" href="images.html">Adding Images & Text</a></li>
+          <li><a class="dropdown-item" href="lesson4.html">Lesson 4 - CSS - Styling </a></li>
+          <li><a class="dropdown-item" href="lesson6.html">Lesson 6 - Page Layout</a></li>
           <!--    <li><hr class="dropdown-divider"></li>-->
+          <li><a class="dropdown-item" href="LESSON8.html">Lesson 8 - Tables</a></li>
           <li><a class="dropdown-item" href="#">Midterm</a></li>
+          <li><a class="dropdown-item" href="flash.html">Adding Video - Sound</a></li>
           <li><a class="dropdown-item" href="#">Mobile Design & Bootstrap</a></li>
 
           <li><a class="dropdown-item" href="lesson12/index.html">Lesson 12 - BootStrap Yosemite </a></li>
 
-          <li><a class="dropdown-item" href="/Truckfin/index.html">Truckfin- Company Draft Website </a></li>
-          <li><a class="dropdown-item" href="/GRNZ/indexboot.html">GRNZ - CrytpoCurrency Exchange Site </a></li>
-          <li><a class="dropdown-item" href="/shaw-master/index.html">Shaw- CupCakes - Store Landing Page </a></li>
-
+          <li><a class="dropdown-item" href="/Truckfin/index.html">Truckfin- Company Website </a></li>
+          <li><a class="dropdown-item" href="/GRNZ/indexboot.html">GRNZ - CrytpoCurrency Site </a></li>
+          <li><a class="dropdown-item" href="/shaw-master/index.html">Shaw- CupCakes - Landing Page </a></li>
+          <li><a class="dropdown-item" href="/Final/index.html">Final Project - Steam Pros  </a></li>
         </ul>
       </li>
 
@@ -55,7 +52,7 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" href="skills.html">Skills</a>
+        <a class="nav-link" href="socialmedia.html">Social Media</a>
       </li>
 
 
@@ -63,18 +60,14 @@
         <a class="nav-link" href="Blog.html">Blog</a>
       </li>
 
-      <!--  <li class="nav-item dropdown">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="product.html" role="button" aria-expanded="false">Products</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="product.html">Online - Beatstars Store</a></li>
-   <li><hr class="dropdown-divider"></li>-->
-
 
           <!--    <li><hr class="dropdown-divider"></li>-->
         </ul>
       </li>
--->
-
 
     </ul>
   </div>
@@ -168,11 +161,7 @@
 
 
 
-                  <div class="col-md-4">
 
-                    <h4 class="display-5" id="ContactHeading"> Contact Form   </h4>
-                    <p>Eager to Learn and Collaborate on projects of any size. From personal business to working with start up
-                      companies.Send me an email with the form below. </p>
 
 
 
